# vetorizador

./: .env  .gitignore  app.js  index.html  package-lock.json  package.json  style.css
api/: vetorizar.js
vetoriza/: Cargo.toml  LICENSE_MIT
vetoriza/pkg/: package.json  vetoriza.d.ts  vetoriza.js  vetoriza_bg.wasm  vetoriza_bg.wasm.d.ts
vetoriza/src/: lib.rs
