[package]
name = "vetoriza"
version = "0.1.0"
authors = ["marcosnunes <marcos.nunes.lph@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
base64 = "0.22.1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "webp", "tiff", "gif"] }
imageproc = "0.25.0"
geojson = "0.24.2"
serde_json = "1.0.140"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
